# mcp-server

./: .gitignore  README.md  env.dist  pyproject.toml  run.sh  server.py
app/: main.py
app/core/: __init__.py  config.py  logger.py
app/mcp/: __init__.py  context.py  server.py
app/server/: __init__.py  asgi.py
app/tools/: __init__.py  calculator.py  data_converter.py  datetime_tool.py  http_fetch.py  server_status.py  text_processor.py
